[gd_scene load_steps=8 format=3 uid="uid://bxp7xivpnggwo"]

[ext_resource type="Script" path="res://scripts/pickaxe.gd" id="1_npjjx"]
[ext_resource type="Texture2D" uid="uid://duilc4lkco1mt" path="res://assets/sprites/pickaxe.png" id="2_hab6q"]
[ext_resource type="Texture2D" uid="uid://c5grjgdqd0vhv" path="res://assets/sprites/wizard_staff.png" id="3_ubmha"]

[sub_resource type="Animation" id="Animation_mj5mo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PivotPoint:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-6.28319]
}

[sub_resource type="Animation" id="Animation_h4kpo"]
resource_name = "mine"
length = 0.2
step = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PivotPoint:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, 1.49891, -0.243, 1.45826, 0, 0, -1.31961, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.199, 0.2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wmmw2"]
_data = {
"RESET": SubResource("Animation_mj5mo"),
"mine": SubResource("Animation_h4kpo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urto6"]
size = Vector2(8, 8)

[node name="Pickaxe" type="Area2D"]
scale = Vector2(-1, 1)
collision_layer = 0
script = ExtResource("1_npjjx")

[node name="PivotPoint" type="Marker2D" parent="."]
rotation = -6.28319

[node name="Pickaxe" type="Sprite2D" parent="PivotPoint"]
visible = false
position = Vector2(-4, -4)
texture = ExtResource("2_hab6q")

[node name="Staff" type="Sprite2D" parent="PivotPoint"]
visible = false
position = Vector2(0.000102727, -23)
texture = ExtResource("3_ubmha")
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wmmw2")
}

[node name="TimerResetState" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-4, -4)
shape = SubResource("RectangleShape2D_urto6")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="timeout" from="TimerResetState" to="." method="_on_timer_reset_state_timeout"]
